<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nametitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameTitle"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLines="1" />
        <EditText
            android:id="@+id/studentid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/studentID"
            android:inputType="number"
            android:maxLines="1" />
        <EditText
            android:id="@+id/nationalidcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nationalIDCard"
            android:inputType="number"
            android:maxLines="1" />
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/postCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postCode"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/mobilephonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobilePhoneNumber"
            android:inputType="text"
            android:maxLines="1" />
        <Button
            android:id="@+id/btn_save"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/action_save"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>